<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <!--Sign up-->
    <string name="name_field_invalid">Name is too short</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="enter_full_name_id_hint">Enter your full name</string>
    <string name="signup_button_text">Sign up</string>
    <string name="choose_password_hint">Choose your password</string>
    <string name="login_with_email">Login with Email</string>
    <string name="name_cant_empty">Name Can\'t be Empty</string>
    <string name="or">OR</string>
    <string name="full_name_hint">Enter full name</string>
    <string name="sign_up_text">Sign up</string>
    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>
    <string name="err_post_detail">could\'nt find this post</string>
    <string name="err_user_detail">could\'nt find this user</string>
    <!-- Edit Profile-->
    <string name="logout">Logout</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="add_image">Add Image</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email_address">Email Address</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

    <!--User-->
    <string name="user_id_formate">\@%s</string>
    <!--Profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="following_count">100\nFollowing</string>
    <string name="followers_count">50\nFollowers</string>
    <string name="posts_count">10\nPosts</string>
    <string name="settings">settings</string>
    <string name="saved">Saved</string>
    <string name="close_friends">Close Friends</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="side_sheet_behavior">com.example.instagram.ui.sidesheetdialog.SideSheetBehavior</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_search">Search</string>
    <string name="follow">Follow</string>
    <string name="default_user_bio">I am passionate Android Developer and I am aim to reach high and Touch the sky.</string>
    <string name="delete">Delete</string>
    <string name="click_image_again">Click Image Again</string>
    <string name="no_post">No Post</string>
</resources>
