<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_unselected"
        android:title="@string/menu_home"
        android:titleCondensed="home"
        app:showAsAction="always" />
    <item
        android:id="@+id/photoFragment"
        android:icon="@drawable/ic_add_photos_unselected"
        android:title="@string/menu_add_photos"
        android:titleCondensed="home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_unselected"
        android:title="@string/menu_profile"
        android:titleCondensed="home"
        app:showAsAction="always" />
</menu>
