<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="6dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:title="deepak.dawade"
                app:navigationIcon="@drawable/ic_prev" />

        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            tools:text="Deepak Dawade"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvUserBio"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/ivProfilePic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUserBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="false"
            tools:text="@string/default_user_bio"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/tvUserName"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPostCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/posts_count"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivProfilePic"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowersCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/followers_count"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPostCount"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowingCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPostCount" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/following_count"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvFollowersCount"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvFollowersCount" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFollowUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/follow"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvUserBio" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
